src/objects/Expense_Item__c.object
<CustomObject>
    <description>Used to track offer related expenses.</description>
    <fields>
        <fullName>Customer_Group_Expense__c</fullName>
        <description>Expense amount for a given GL account related to a customer group.</description>
        <label>Customer Group Expense</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <referenceTo>Proforma__c</referenceTo>
        <relationshipLabel>Expense Items</relationshipLabel>
        <relationshipName>Expense_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>RC Multiplier Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RR/GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo Chips/Match Play</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total RC Reinvestment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Giveaways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Airfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postage &amp; Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casino Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC Gift</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GL_Code_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Code ID</label>
        <referenceTo>GL_Code__c</referenceTo>
        <relationshipLabel>Expense Items</relationshipLabel>
        <relationshipName>Expense_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <label>GL Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Description__c</fullName>
        <formula>GL_Code_ID__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Item_Amount__c</fullName>
        <label>Per Item Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Expense_Type__c</columns>
        <columns>GL_Code__c</columns>
        <columns>GL_Description__c</columns>
        <columns>Customer_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exp - {0000}</displayFormat>
        <label>Expense Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>